feat(i18n): fixed review findings